# deciphon

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  TODO.txt  bug.h  compiler.h  db_press.c  db_press.h  db_prof_reader.c  db_prof_reader.h  db_prot_reader.c  db_prot_reader.h  db_prot_writer.c  db_prot_writer.h  db_reader.c  db_reader.h  db_types.h  db_writer.c  db_writer.h  deciphon-config.cmake.in  deciphon_limits.h  defer_return.h  die.c  die.h  dirname.c  dirname.h  errmsg.c  errmsg.h  expect.c  expect.h  fs.c  fs.h  is.c  is.h  itoa.c  itoa.h  lazylog.c  lazylog.h  lite_pack.h  logy.h  (+63 more)
.github/workflows/: cmake.yml
db/: db.h  press.c  press.h  prof_reader.c  prof_reader.h  profile_reader.c  profile_reader.h  prot_reader.c  prot_reader.h  prot_writer.c  prot_writer.h  reader.c  reader.h  types.h  writer.c  writer.h
include/deciphon/: deciphon.h  h3file.h  h3prof.h  protein.h
model/: entry_dist.h  model.h  nuclt_dist.c  nuclt_dist.h  prof.c  prof.h  prof_types.c  profile.c  profile.h  profile_typeid.h  profile_types.c  prot_cfg.h  prot_codec.c  prot_codec.h  prot_h3reader.c  prot_h3reader.h  prot_model.c  prot_model.h  prot_node.h  prot_prof.c  prot_prof.h  prot_profile.c  prot_profile.h  prot_state.c  prot_state.h  prot_trans.h  prot_xnode.h  prot_xtrans.h  standard_profile.c  standard_profile.h  standard_state.c  standard_state.h  std_prof.c  std_prof.h  std_state.c
press/: CMakeLists.txt  press.c  press.h
test/: CMakeLists.txt  MANIFEST  generate-assets  helper.c  helper.cmake  helper.h  hope.h  hope_support.h  prot_db.c  prot_model.c  prot_prof.c  protein_db.c  protein_model.c  protein_profile.c  ross.h  scan.c  standard_profile.c  std_prof.c
