function(deciphon_add_test name)
  add_executable(${name} ${name}.c)
  target_code_coverage(${name} AUTO ALL)
  target_link_libraries(${name} PRIVATE DECIPHON::deciphon)
  target_compile_options(${name} PRIVATE ${WARNING_FLAGS})
  target_include_directories(${name} PRIVATE ${CMAKE_SOURCE_DIR})
  add_test(NAME test_${name} COMMAND ${name})
endfunction()

set(testdir "${CMAKE_CURRENT_BINARY_DIR}")
set(tmpdir "${CMAKE_CURRENT_BINARY_DIR}/tmp")
file(MAKE_DIRECTORY "${tmpdir}")

add_compile_definitions(TESTDIR="${testdir}")
add_compile_definitions(TMPDIR="${tmpdir}")

deciphon_add_test(std_prof)
deciphon_add_test(prot_model)
deciphon_add_test(prot_prof)
deciphon_add_test(prot_db)
